--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
     border-radius: 25px;
     padding: 10px;
     text-align: center;
-    width: 500px;
+    width: auto;
     margin: auto;
 }
 .recipe-button {
